# pancake

./: CMakeLists.txt  README.md  build.sh  build.sh.cpp
dynamic/: CMakeLists.txt
dynamic/benchmark/: benchmark.cpp  dynamic_ks_benchmark.cpp
dynamic/cmakebuild/gen-cpp/: pancake_thrift.cpp  pancake_thrift.h  pancake_thrift_response.cpp  pancake_thrift_response.h  pancake_types.cpp  pancake_types.h
dynamic/ks/: benchmark.cpp  benchmark.h  histogram_distribution.cpp  histogram_distribution.h  sliding_window_distribution.cpp  sliding_window_distribution.h  statistical_test.cpp  statistical_test.h  zipf_generator.cpp  zipf_generator.h
dynamic/proxy/: thrift_server.cpp  thrift_server.h
dynamic/proxy/distribution/: distribution.h  dynamic_distribution.cpp  dynamic_distribution.h
dynamic/proxy/encryption/: encryption.cpp
dynamic/proxy/pancakeProxy/: pancake_proxy.cpp  pancake_proxy.h
dynamic/proxy/queue/: queue.cpp
dynamic/proxy/updateCache/: updateCache.cpp
dynamic/proxy/util/: random.cpp  random.h
dynamic/server/: server.cpp
dynamic/service/: thrift_helpers.h
dynamic/storage/: interface.h
dynamic/storage/redis/: redis.h
dynamic/tests/: distributionTest.cpp  pancakeTest.cpp
gradual/: CMakeLists.txt
gradual/ad/: benchmark.cpp  benchmark.h  histogram_distribution.cpp  histogram_distribution.h  sliding_window_distribution.cpp  sliding_window_distribution.h  statistical_test.cpp  statistical_test.h  zipf_generator.cpp  zipf_generator.h
gradual/benchmark/: dynamic_ad_benchmark.cpp  timer.h
gradual/client/asyncClient/: async_client.cpp
gradual/client/commandReader/: command_reader.cpp
gradual/proxy/: thrift_server.cpp
gradual/proxy/operation/: operation.h
gradual/proxy/pancakeProxy/: pancake_proxy.cpp  pancake_proxy.h
gradual/proxy/queue/: queue.h
gradual/proxy/updateCache/: updateCache.cpp  updateCache.h
gradual/service/: kv_store.h  proxy_server.cpp  proxy_types.cpp  proxy_types.h  thrift.cpp  thrift.h  thrift_response_service.h
gradual/storage/redis/: redis.cpp  redis.h
gradual/tests/: distributionTest.cpp  encryptionTest.cpp  updateCacheTest.cpp
gradual/thrift/: pancake.thrift
static/: CMakeLists.txt  build.sh
static/benchmark/: benchmark.cpp
static/client/: CMakeLists.txt  async_client.cpp  client.h  proxy_client.cpp  proxy_client.h
static/client/asyncClient/: CMakeLists.txt  async_client.h
static/client/commandReader/: CMakeLists.txt  command_reader.cpp  command_reader.h
static/client/proxyClient/: CMakeLists.txt  proxy_client.cpp  proxy_client.h
static/proxy/: CMakeLists.txt  proxy.h  thrift_server.h
static/proxy/distribution/: CMakeLists.txt  distribution.cpp  distribution.h
static/proxy/encryption/: CMakeLists.txt  encryption.cpp  encryption.h
static/proxy/pancakeProxy/: CMakeLists.txt  pancake_proxy.cpp  pancake_proxy.h
static/proxy/queue/: CMakeLists.txt  queue.h
static/proxy/updateCache/: CMakeLists.txt  updateCache.cpp  updateCache.h
static/proxy/util/: CMakeLists.txt  random.cpp
static/server/: CMakeLists.txt  server.cpp
static/service/: CMakeLists.txt  kv_store.h  proxy_server.cpp  proxy_types.cpp  thrift.cpp  thrift.h  thrift_helpers.h  thrift_response_service.cpp  thrift_response_service.h  thrift_utils.h
static/storage/: interface.h  redis.h
static/storage/redis/: CMakeLists.txt  redis.cpp  redis.h
static/tests/: distributionTest.cpp  pancakeTest.cpp  storageTest.cpp  updateCacheTest.cpp
